# fastAPI-learnings

DAY1/: app.py
DAY2/: pyproject.toml
DAY2/day2/: app.py  middleware.py
DAY3/: pyproject.toml
DAY4/: pyproject.toml
