[tool.poetry]
name = "day2"
version = "0.1.0"
description = ""
authors = ["ishuvam <ishuvam549@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
